--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
 
         if (user) {
           localStorage.setItem("loggedIn", "true");
-          window.location.href = "index.html";
+          window.location.href = "Index.html";
         } else {
           document.getElementById("error-message").textContent =
             "ชื่อผู้ใช้หรือรหัสผ่านไม่ถูกต้อง";
